--- a/styles/sass/video-window/_core.scss
+++ b/styles/sass/video-window/_core.scss
@@ -1,5 +1,4 @@
 .video-window {
-  border: 1px solid silver;
   height: 100%;
   overflow: scroll;
   -ms-overflow-style: none;
@@ -11,7 +10,6 @@
 }
 
 .video-item {
-//  white-space: nowrap;
   overflow: hidden;
   height: 130px;
   margin: 10px;
@@ -45,7 +43,6 @@
 }
 
 .add-video-btn {
-//  border: 1px solid $primary-color;
   font-size: 1rem;
   margin: 10px 5px;
   padding: 5px;
